--- a/PackageReferenceAddin.csproj
+++ b/PackageReferenceAddin.csproj
@@ -89,7 +89,7 @@
     </MonoDevelop>
   </ProjectExtensions>
   <ItemGroup>
-    <ProjectReference Include="knowingnupack\NuPack.Core\NuPack.Core.csproj">
+    <ProjectReference Include="NuGet\NuPack.Core\NuPack.Core.csproj">
       <Project>{F879F274-EFA0-4157-8404-33A19B4E6AEC}</Project>
       <Name>NuPack.Core</Name>
     </ProjectReference>
