--- a/NuGet/NuPack.Core/NuPack.Core.csproj
+++ b/NuGet/NuPack.Core/NuPack.Core.csproj
@@ -9,6 +9,8 @@
     <AssemblyName>NuGet.Core</AssemblyName>
     <CodeAnalysisRuleSet>..\NuPack.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis Condition="'$(EnableCodeAnalysis)'=='true'">true</RunCodeAnalysis>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\Common\CommonResources.resx">
