--- a/PackageReferenceAddin.csproj
+++ b/PackageReferenceAddin.csproj
@@ -80,9 +80,9 @@
     <None Include="LICENSE.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="NuGet\NuPack.Core\NuPack.Core.csproj">
+    <ProjectReference Include="NuGet\NuPack.Core\NuGet.Core.csproj">
       <Project>{F879F274-EFA0-4157-8404-33A19B4E6AEC}</Project>
-      <Name>NuPack.Core</Name>
+      <Name>NuGet.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ProjectExtensions>
