--- a/PackageReferenceAddin.csproj
+++ b/PackageReferenceAddin.csproj
@@ -41,6 +41,10 @@
     </Reference>
     <Reference Include="gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
     </Reference>
+    <Reference Include="Mono.Addins, Version=0.6.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Mono.Addins.0.6\lib\Mono.Addins.dll</HintPath>
+    </Reference>
     <Reference Include="MonoDevelop.Core, Version=2.4.0.0, Culture=neutral">
       <HintPath>..\..\..\..\Program Files (x86)\MonoDevelop\bin\MonoDevelop.Core.dll</HintPath>
     </Reference>
@@ -50,9 +54,6 @@
     <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
     </Reference>
     <Reference Include="Mono.Posix" />
-    <Reference Include="Mono.Addins, Version=0.5.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
-      <HintPath>lib\Mono.Addins.dll</HintPath>
-    </Reference>
     <Reference Include="NuGet.Core, Version=1.1.229.159, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\NuGet.Core.1.1.229.159\lib\net40\NuGet.Core.dll</HintPath>
