--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NuGet.Core" version="1.1.229.159" />
+  <package id="Mono.Addins" version="0.6" />
 </packages>
